# C_Labs

task_template/: Makefile
task_template/src/: CMakeLists.txt  main.c
task_template/src/libs/general_utils/: CMakeLists.txt  general_utils.c  general_utils.h
task_template/src/tasks/: CMakeLists.txt  task1.c  task2.c  tasks.h
